# SoftwareConstruction

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  index.scss
docs/: index-31b94d3d69c476b2.css  index-bec36287e562e2d3.css  index.html  software_construction-21b35dc5b77d0851.js  software_construction-21b35dc5b77d0851_bg.wasm  software_construction-30612165662bb893.js  software_construction-30612165662bb893_bg.wasm  software_construction-388a0eb3801fa358.js  software_construction-388a0eb3801fa358_bg.wasm  software_construction-3d94b73c95a609e0.js  software_construction-3d94b73c95a609e0_bg.wasm  software_construction-458409e35e02084a.js  software_construction-458409e35e02084a_bg.wasm  software_construction-4d95274c307ef508_bg.wasm  software_construction-54343ad6db70dc00.js  software_construction-54343ad6db70dc00_bg.wasm  software_construction-5761e9ff749c8c5c.js  software_construction-5761e9ff749c8c5c_bg.wasm  software_construction-5bb25296ad897ccd.js  software_construction-5bb25296ad897ccd_bg.wasm  software_construction-ce4c85345c7064d7.js  software_construction-ce4c85345c7064d7_bg.wasm  software_construction-dc0c93cf038be390.js  software_construction-dc0c93cf038be390_bg.wasm
docs/assignment1/: index.html
public/: index-dce7df8c25593ce0.css  software_construction-4d95274c307ef508.js
src/: main.rs
src/components/: app_list.rs  loading.rs  mod.rs  nav.rs
src/services/: assignment.rs
vue/assignment1/: README.md  index.html  package-lock.json  package.json  vite.config.ts
vue/assignment2/: README.md  index.html  package-lock.json  package.json  (+2 more)
(+18 files in other folders)
