[package]
name = "software_construction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14" }
yew = "0.19.3"
yew-hooks = "0.1.56"
wasm-logger = "0.2.0"
serde = "1.0.139" 
serde_json = "1.0.82"
thiserror = "1.0.31" 
js-sys = "0.3.59"  
reqwest = "0.11.11"   
gloo-timers = "0.2.4"
web-sys = "0.3.60"